test/error/semantic/redeclaration_param.kat
func main(argc: int, argv: str) => int {
  let argc: int = 1;
  return 0;
}
